fix: Revert of fixed navbar due to layout shift

--- a/Explorer/src/app/feature-modules/layout/landing/landing.component.css
+++ b/Explorer/src/app/feature-modules/layout/landing/landing.component.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     padding: 25px 50px;
-    padding-top: 90px;
     gap: 50px;
 }
 
