--- a/Explorer/src/app/feature-modules/layout/navbar/navbar.component.css
+++ b/Explorer/src/app/feature-modules/layout/navbar/navbar.component.css
@@ -1,6 +1,4 @@
 .navigation-bar {
-    position: fixed;
-    top: 0;
     background-color: white;
     display: flex;
     align-items: center;
